.config/mozilla/firefox/chrome/userChrome.css
/*
    ################################
    ### iDigitalFlame  2016-2024 ###
    #                              #
    #            -/`               #
    #            -yy-   :/`        #
    #         ./-shho`:so`         #
    #    .:- /syhhhh//hhs` `-`     #
    #   :ys-:shhhhhhshhhh.:o- `    #
    #   /yhsoshhhhhhhhhhhyho`:/.   #
    #   `:yhyshhhhhhhhhhhhhh+hd:   #
    #     :yssyhhhhhyhhhhhhhhdd:   #
    #    .:.oyshhhyyyhhhhhhddd:    #
    #    :o+hhhhhyssyhhdddmmd-     #
    #     .+yhhhhyssshdmmddo.      #
    #       `///yyysshd++`         #
    #                              #
    ########## SPACEPORT ###########
    ## Firefox/LibreWolf UserCSS Configuration

    Copyright (C) 2016 - 2024 iDigitalFlame

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https: //www.gnu.org/licenses/>.
*/

html#main-window {
    background: transparent !important;
    --panel-color: #FFF !important;
    --color-bg: transparent !important;
    --background-color-canvas: transparent !important;
    --arrowpanel-border-color: transparent !important;
    --arrowpanel-color: rgb(255, 255, 255) !important;
    --toolbar-bgcolor: rgba(10, 0, 10, 0.65) !important;
    --panel-background: rgba(10, 0, 10, 0.7) !important;
    --button-hover-bgcolor: rgb(125, 11, 171) !important;
    --button-active-bgcolor: rgb(172, 15, 235) !important;
    --lwt-toolbar-field-color: rgb(255, 255, 255) !important;
    --arrowpanel-background: rgba(10, 0, 10, 0.7) !important;
    --lwt-toolbar-field-background-color: transparent !important;
    --button-active-hover-bgcolor: rgb(172, 15, 235) !important;
    --button-primary-hover-bgcolor: rgb(125, 11, 171) !important;
    --lwt-toolbar-field-focus-color: rgb(255, 255, 255) !important;
    --toolbarbutton-hover-background: rgb(125, 11, 171) !important;
    --toolbarbutton-active-background: rgb(125, 11, 171) !important
}
input#urlbar-input {
    font-size: 10pt !important;
    font-weight: 400 !important;
    padding-left: 2px !important;
    background: transparent !important;
    caret-color: rgb(255, 255, 255) !important;
    font-family: "Source Code Pro", Arial, sans-serif !important
}

:is(menupopup, panel):where([type="arrow"]) {
    --panel-background: rgba(10, 0, 10, 0.7) !important
}

panelmultiview#appMenu-multiView, panel#appMenu-popup {
    --panel-background: rgba(10, 0, 10, 0.4) !important
}

menupopup {
    --menu-color: #FFF !important;
    --panel-color: #FFF !important;
    --arrowpanel-color: #FFF !important;
    --menu-border-color: rgb(125, 11, 171) !important;
    --panel-border-color: rgb(125, 11, 171) !important;
    --panel-background: rgba(10, 0, 10, 0.7) !important;
    --button-hover-bgcolor: rgb(125, 11, 171) !important;
    --arrowpanel-border-color: rgb(125, 11, 171) !important;
    --menu-disabled-color: rgba(50, 50, 50, 0.75) !important;
    --menu-background-color: rgba(10, 0, 10, 0.7) !important;
    --arrowpanel-background: rgba(10, 0, 10, 0.7) !important;
    --menuitem-hover-background-color: rgb(125, 11, 171) !important;
    --menuitem-disabled-hover-background-color: rgba(80, 80, 80, 0.75) !important
}

panelmultiview {
    padding: 2px !important;
    border-radius: 10px !important;
    background: rgba(10, 0, 10, 0.2) !important;
    border: 1px solid rgb(172, 15, 235) !important
}
splitter, #sidebar-header, #history-panel, #sidebar-box, #bookmarksPanel, #tabbrowser-tabbox, #tabbrowser-tabpanels, #webext-panels-browser {
    border: none !important;
    background: transparent !important
}

tab,
#identity-box,
.titlebar-min,
.titlebar-max,
#alltabs-button,
.titlebar-close,
.panel-arrowbox,
.tab-background,
#window-controls,
.titlebar-restore,
#autohide-context,
.urlbarView-favicon,
#nav-bar-overflow-button,
#navigator-toolbox::after,
.urlbar-addon-page-action,
.urlbar-history-dropmarker {
    display: none !important;
    appearance: none !important
}

#TabsToolbar {
    box-shadow: none !important;
    appearance: none !important
}
#sidebar-box {
    flex-direction: column-reverse !important
}
#tabbrowser-tabs {
    min-height: 0 !important;
    visibility: collapse !important
}
#urlbar-background {
    border-radius: 8px !important;
    background-color: rgba(10, 0, 10, 0.7) !important
}
#navigator-toolbox {
    box-shadow: none !important;
    --tabs-border-color: transparent !important
}
#tabs-newtab-button {
    margin: 0 !important
}
#PanelUI-menu-button {
    padding-inline-end: 0 !important
}
#tracking-protection-icon-container {
    padding-right: 0 !important;
    margin-right: 2px !important
}
#navigator-toolbox, #nav-bar, #TabsToolbar {
    border: none !important
}

/* Remove "Send Tab to Device" */
*[id^="treestyletab_piro_sakura_ne_jp-menuitem-_context_send"] {
    display: none !important
}
#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header, #context-media-eme-separator {
    display: none !important
}
#context-media-eme-learnmore, #context-keywordfield, #fill-login-generated-password, #manage-saved-logins, #passwordmgr-items-separator, #context-sendlinktodevice, #context-setDesktopBackground {
    display: none !important
}

menu[id^="_testpilot-containers-menuitem-"], menuitem[id^="skipredirect_sblask-menuitem-_copy-target-url"] {
    display: none !important
}

#TabsToolbar,
.urlbar-input-box,
#navigator-toolbox,
#webextpanels-window,
#sidebar-box > #browser,
.sidebar-panel[lwt-sidebar],
.browser-toolbar:not(.titlebar-color) {
    background: transparent !important
}

.urlbarView {
    border-radius: 0 8px 8px !important;
    background-color: transparent !important;
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.4) !important
}
.urlbarView-row[selected] {
    background: rgba(125, 11, 171, 0.8) !important
}

.panel-arrowbox {
    margin: 0 !important;
}
.urlbar-input-box {
    border-radius: 5px !important
}
.urlbarView-action {
    color: #FFF !important
}
.panel-arrowcontent {
    margin: 0 !important;
    opacity: 1 !important
}
.contentAreaContextMenu {
    border: none !important;
    appearance: none !important
}
.toolbarbutton-badge-stack, .toolbarbutton-icon {
    border-radius: 10px !important;
    background-color: rgba(10, 0, 10, 0.65)
}

